--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "base64-url": "^2.3.3",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.3",
     "elliptic": "^6.5.6",
     "express": "^4.19.2",
     "framer-motion": "^11.3.19",
@@ -20,6 +21,7 @@
     "next": "14.2.5",
     "nodemailer": "^6.9.14",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
